devops/kubernetes-manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bahyway
  labels:
    name: bahyway
    environment: development
